# rtsp_client

./: CMakeLists.txt  DummySink.cpp  DummySink.h  MultiRTSPClient.cpp  MultiRTSPClient.h  Queue.h  main.cpp
